# Ripple

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: cpu-ci.yml
adrs/: 0000-architecture-decision-template.md  0001-registry.md
configs/benchmark/: default.yaml
configs/data/: multilingual_core.yaml
configs/eval/: default.yaml
configs/export/: default.yaml
configs/model/: edge.yaml
configs/train/: default.yaml
docs/: 01-research-method-and-streamvc-audit.md  02-state-of-the-art-review.md  03-ripple-architecture.md  04-training-data-and-losses.md  05-streaming-and-inference.md  06-deployment-quantization-and-export.md  07-evaluation-and-benchmarks.md  08-project-structure.md  09-implementation-roadmap.md  10-tts-extension-and-future-research.md  README.md  REFERENCES.md
envs/dev/: pyproject.toml
envs/evaluation/: pyproject.toml
envs/export/: pyproject.toml
envs/teachers/: pyproject.toml
envs/train/: pyproject.toml
fixtures/multilingual-core/: DATASET_CARD.md  README.md
fixtures/multilingual-core/manifests/: development.json  test.json  train.json
governance/: DATASET_CARD_TEMPLATE.md  DATASET_CARD_ripple-multilingual-v0.1.0.md  MODEL_CARD_TEMPLATE.md  RELEASE_CHECKLIST.md  SAFETY_CARD_TEMPLATE.md
modal/: README.md  train_l4.py
runtime/: CMakeLists.txt
runtime/include/: ripple.h
runtime/src/: ripple.cpp
runtime/tests/: runtime_test.cpp
src/ripple/: __init__.py
src/ripple/audio/: __init__.py  augmentation.py  framing.py  io.py  pitch.py  resample.py
src/ripple/baselines/: __init__.py  streamvc.py
src/ripple/benchmark/: __init__.py  latency.py  memory.py  quality.py  report.py
src/ripple/cli/: __init__.py  benchmark.py  common.py  config_cmd.py  convert.py  data_cmd.py  doctor.py  enroll.py  eval_cmd.py  export.py  features.py  main.py  manifest.py  stream.py  train_cmd.py
src/ripple/contracts/: __init__.py  checksums.py  config.py  manifest.py  rif.py  speaker_profile.py  stream_state.py
src/ripple/data/: __init__.py  canonicalize.py  dataset.py  features.py  filters.py  manifest.py  sampler.py  seal.py  split.py
src/ripple/evaluation/: __init__.py  intelligibility.py  leakage.py  long_session.py  prosody.py  quality.py  speaker.py
src/ripple/export/: __init__.py  artifact.py  backends.py  coreml.py  executorch.py  litert.py  onnx.py  state.py  tensorrt.py  torch_export.py  validate.py
src/ripple/models/: __init__.py  analysis_encoder.py  decoder.py  prosody_encoder.py  ripple_mixer.py  ripple_vc.py  source_filter.py  speaker_encoder.py
src/ripple/quantization/: __init__.py  calibrate.py  ptq.py  qat.py  sensitivity.py
src/ripple/research/: __init__.py  variants.py
src/ripple/safety/: __init__.py  consent.py  provenance.py  watermark.py
src/ripple/streaming/: __init__.py  cached_conv.py  local_attention.py  packet_loss.py  running_stats.py  session.py
src/ripple/teachers/: __init__.py  base.py  hubert.py  protocol.py  wavlm.py  whisper.py  xlsr.py
src/ripple/training/: __init__.py  batching.py  checkpoint.py  factory.py  loop.py  losses.py  schedules.py  stages.py  steps.py  trainer.py
src/ripple/tts/: __init__.py  duration.py  frontend.py  normalization.py  scheduler.py  tokenization.py
tests/export/: conftest.py  test_artifact.py  test_backends.py  test_onnx_export.py  test_state.py
tests/integration/: test_artifact_runtime_native.py  test_cli_tools.py
tests/quantization/: test_quantization_smoke.py
tests/regression/: test_evaluation_benchmark_smoke.py  test_training_smoke.py
tests/streaming/: test_streaming_core.py
tests/unit/: test_audio.py  test_config.py  test_contracts.py  test_data.py  test_losses.py  test_losses_spectral.py  test_models_streaming.py  test_multilingual_fixture.py  test_research_variants.py  test_safety.py  test_training_cli_helpers.py  test_tts.py
tools/: benchmark_model.py  convert.py  doctor.py  enroll_speaker.py  export_model.py  extract_teacher_features.py  prepare_dataset.py  stream_demo.py  train.py
